2/2.08/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend-db-dep
  namespace: todos-db-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-backend-db
  template:
    metadata:
      labels:
        app: todos-backend-db
    spec:
      containers:
        - name: todo-backend-db
          image: jylhakos/todo-backend-db:2.0.15
