2/2.08/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-frontend-db-dep
  namespace: todos-db-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-frontend-db
  template:
    metadata:
      labels:
        app: todos-frontend-db
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-finder
          image: jylhakos/todo-finder
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: todo-response-db
          image: jylhakos/todo-response-db
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
