2/2.08/manifests/service-finder.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-finder-svc
  namespace: todos-db-namespace
spec:
  type: NodePort
  selector:
    app: todos-frontend-db
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3001
