2/2.08/manifests/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: app-db-namespace
  labels:
    app: postgresql
spec:
  type: ClusterIP
  selector:
    app: postgresql-db
  ports:
  - name: postgresql-port
    port: 5432
    protocol: TCP
    targetPort: 5432
  clusterIP: None
