2/2.08/manifests/service-response.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-response-svc
  namespace: todos-namespace
spec:
  type: ClusterIP
  selector:
    app: todos-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
